--- a/dotnet/RhinoCommon.csproj
+++ b/dotnet/RhinoCommon.csproj
@@ -235,6 +235,7 @@
     <Compile Include="rhino\rhinosdkmouse.cs" />
     <Compile Include="rhino\rhinosdkobjectattributes.cs" />
     <Compile Include="rhino\rhinosdkobjecthistory.cs" />
+    <Compile Include="rhino\rhinosdkoptionsdialogpage.cs" />
     <Compile Include="rhino\rhinosdkpagelayoutview.cs" />
     <Compile Include="rhino\rhinosdkplugin.cs" />
     <Compile Include="rhino\rhinosdkpointobject.cs" />
@@ -252,6 +253,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="rhino\rhinosdkget.cs" />
     <Compile Include="rhino\rhinosdkpolyedge.cs" />
+    <Compile Include="rhino\rhinosdkstackeddialogpage.cs" />
     <Compile Include="rhino\rhinosdkuiprofilecontext.cs" />
     <Compile Include="rhino\rhinosdkview.cs" />
     <Compile Include="rhino\rhinosdkviewport.cs" />
