--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -99,6 +99,7 @@
     <Compile Include="ex_addtruncatedcone.vb" />
     <Compile Include="ex_dividebylength.vb" />
     <Compile Include="ex_findobjectsbyname.vb" />
+    <Compile Include="ex_objectlayer.vb" />
     <Compile Include="ex_orientonsrf.vb" />
     <Compile Include="ex_sellayer.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
