--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -98,6 +98,7 @@
     <Compile Include="ex_addtexture.vb" />
     <Compile Include="ex_addtorus.vb" />
     <Compile Include="ex_addtruncatedcone.vb" />
+    <Compile Include="ex_commandlineoptions.vb" />
     <Compile Include="ex_dividebylength.vb" />
     <Compile Include="ex_findobjectsbyname.vb" />
     <Compile Include="ex_objectlayer.vb" />
