--- a/dotnet/RhinoCommon.csproj
+++ b/dotnet/RhinoCommon.csproj
@@ -165,6 +165,7 @@
     <Compile Include="RDK\rdk_contentfield.cs" />
     <Compile Include="RDK\rdk_content_factories.cs" />
     <Compile Include="RDK\rdk_content_list.cs" />
+    <Compile Include="RDK\rdk_custom_render_meshes.cs" />
     <Compile Include="RDK\rdk_decals.cs" />
     <Compile Include="RDK\rdk_environment.cs" />
     <Compile Include="RDK\rdk_globals.cs" />
