--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /dotnet/UI/*.resources
+/dotnet/monostart/bin
+/dotnet/monostart/obj
+/dotnet/monostart/monostart.pidb
 /dotnet/RhinoCommonMono.userprefs
 /dotnet/Debug
 /dotnet/Release
+/dotnet/bin
 /dotnet/obj
 /dotnet/RhinoCommon.suo
 /dotnet/RhinoCommon.sln
