--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -88,6 +88,7 @@
     <Compile Include="ex_addline.vb" />
     <Compile Include="ex_addlineardimension.vb" />
     <Compile Include="ex_addlineardimension2.vb" />
+    <Compile Include="ex_addmaterial.vb" />
     <Compile Include="ex_addmesh.vb" />
     <Compile Include="ex_addnamedview.vb" />
     <Compile Include="ex_addnurbscircle.vb" />
@@ -107,6 +108,7 @@
     <Compile Include="ex_dividebylength.vb" />
     <Compile Include="ex_findobjectsbyname.vb" />
     <Compile Include="ex_insertknot.vb" />
+    <Compile Include="ex_objectdisplaymode.vb" />
     <Compile Include="ex_objectlayer.vb" />
     <Compile Include="ex_orientonsrf.vb" />
     <Compile Include="ex_sellayer.vb" />
