--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -99,6 +99,7 @@
     <Compile Include="ex_findobjectsbyname.cs" />
     <Compile Include="ex_constrainedcopy.cs" />
     <Compile Include="ex_insertknot.cs" />
+    <Compile Include="ex_instancedefinitionobjects.cs" />
     <Compile Include="ex_intersectlines.cs" />
     <Compile Include="ex_isocurvedensity.cs" />
     <Compile Include="ex_movecplane.cs" />
