added curveboundingbox and intersectcurves examples

--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -93,6 +93,7 @@
     <Compile Include="ex_circlecenter.cs" />
     <Compile Include="ex_commandlineoptions.cs" />
     <Compile Include="ex_createblock.cs" />
+    <Compile Include="ex_curveboundingbox.cs" />
     <Compile Include="ex_custompython.cs" />
     <Compile Include="ex_dividebylength.cs" />
     <Compile Include="ex_dupborder.cs" />
@@ -100,6 +101,7 @@
     <Compile Include="ex_constrainedcopy.cs" />
     <Compile Include="ex_insertknot.cs" />
     <Compile Include="ex_instancedefinitionobjects.cs" />
+    <Compile Include="ex_intersectcurves.cs" />
     <Compile Include="ex_intersectlines.cs" />
     <Compile Include="ex_isocurvedensity.cs" />
     <Compile Include="ex_movecplane.cs" />
