putting standalone RhinoCommon together

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,116 @@
 /c/Info.plist
 /c/rhcommon_c.xcodeproj
 /c/x64
+/c/rh_annotationobject.cpp
+/c/rh_app.cpp
+/c/rh_appsettings.cpp
+/c/rh_bitmap.cpp
+/c/rh_command.cpp
+/c/rh_dimstyle.cpp
+/c/rh_displayattrsmgr.cpp
+/c/rh_displayconduit.cpp
+/c/rh_displaypipeline.cpp
+/c/rh_displaypipelineattributes.cpp
+/c/rh_displaypipelinematerial.cpp
+/c/rh_doc.cpp
+/c/rh_docproperties.cpp
+/c/rh_eventwatcher.cpp
+/c/rh_font.cpp
+/c/rh_get.cpp
+/c/rh_getdimlinear.cpp
+/c/rh_getfiledialog.cpp
+/c/rh_getobject.cpp
+/c/rh_getplane.cpp
+/c/rh_getpoint.cpp
+/c/rh_getstring.cpp
+/c/rh_getview.cpp
+/c/rh_grips.cpp
+/c/rh_group.cpp
+/c/rh_hatchpattern.cpp
+/c/rh_instance.cpp
+/c/rh_layer.cpp
+/c/rh_light.cpp
+/c/rh_linetype.cpp
+/c/rh_material.cpp
+/c/rh_meshutilities.cpp
+/c/rh_mouse.cpp
+/c/rh_object.cpp
+/c/rh_objectattributes.cpp
+/c/rh_pagelayoutview.cpp
+/c/rh_plugin.cpp
+/c/rh_pluginmanager.cpp
+/c/rh_pointobject.cpp
+/c/rh_skindll.cpp
+/c/rh_sweep.cpp
+/c/rh_textout.cpp
+/c/rh_utilities.cpp
+/c/rh_view.cpp
+/c/rh_viewport.cpp
+/c/rhcommon.cpp
+/c/rhcommon_c.rc
+/c/rhcommon_c.vcproj
+/c/rhcommon_c.vcproj.MCNEEL.a-steve.user
+/c/rhcommon_c.vcxproj
+/c/rhcommon_c.vcxproj.filters
+/c/rhcommon_c.vcxproj.user
+/c/rhcommon_c_Prefix.pch
+/c/stdafx.cpp
+/c/stdafx.h
+/c/version.plist
+/c/opennurbs_memory_new.cpp
+/c/rh_annotationobject.cpp
+/c/rh_app.cpp
+/c/rh_appsettings.cpp
+/c/rh_bitmap.cpp
+/c/rh_command.cpp
+/c/rh_dimstyle.cpp
+/c/rh_displayattrsmgr.cpp
+/c/rh_displayconduit.cpp
+/c/rh_displaypipeline.cpp
+/c/rh_displaypipelineattributes.cpp
+/c/rh_displaypipelinematerial.cpp
+/c/rh_doc.cpp
+/c/rh_docproperties.cpp
+/c/rh_eventwatcher.cpp
+/c/rh_font.cpp
+/c/rh_get.cpp
+/c/rh_getdimlinear.cpp
+/c/rh_getfiledialog.cpp
+/c/rh_getobject.cpp
+/c/rh_getplane.cpp
+/c/rh_getpoint.cpp
+/c/rh_getstring.cpp
+/c/rh_getview.cpp
+/c/rh_grips.cpp
+/c/rh_group.cpp
+/c/rh_hatchpattern.cpp
+/c/rh_instance.cpp
+/c/rh_layer.cpp
+/c/rh_light.cpp
+/c/rh_linetype.cpp
+/c/rh_material.cpp
+/c/rh_meshutilities.cpp
+/c/rh_mouse.cpp
+/c/rh_object.cpp
+/c/rh_objectattributes.cpp
+/c/rh_pagelayoutview.cpp
+/c/rh_plugin.cpp
+/c/rh_pluginmanager.cpp
+/c/rh_pointobject.cpp
+/c/rh_skindll.cpp
+/c/rh_sweep.cpp
+/c/rh_textout.cpp
+/c/rh_utilities.cpp
+/c/rh_view.cpp
+/c/rh_viewport.cpp
+/c/rhcommon.cpp
+/c/rhcommon_c.rc
+/c/rhcommon_c.vcproj
+/c/rhcommon_c.vcproj.MCNEEL.a-steve.user
+/c/rhcommon_c.vcxproj
+/c/rhcommon_c.vcxproj.filters
+/c/rhcommon_c.vcxproj.user
+/c/rhcommon_c_Prefix.pch
+/c/stdafx.cpp
+/c/stdafx.h
+/c/version.plist
